# noctiluca

./: Makefile  README.md  pyproject.toml
doc/: requirements.txt
doc/sphinx/source/: conf.py  index.rst  intro.rst  noctiluca.analysis.rst  noctiluca.io.rst  noctiluca.rst  noctiluca.util.rst  post-apidoc.vim  write_examples_rst.vim
examples/: 01_Trajectory.ipynb  02_TaggedSet.ipynb  03_IO.ipynb  04_MSD_analysis.ipynb  README.md
noctiluca/: __init__.py  parallel.py  plot.py  taggedset.py  trajectory.py
noctiluca/analysis/: __init__.py  p2.py
noctiluca/io/: __init__.py  hdf5.py  load.py  write.py
noctiluca/util/: __init__.py  _util.py  clean.py  parallel.py  userinput.py
tests/: context.py  test_analysis.py  test_core.py  test_io.py  test_noctiluca.py  test_plot.py  test_util.py
