[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noctiluca"
version = "0.0.0"
authors = [
  { name="Simon Grosse-Holz", email="sgh256@mit.edu" }
]
description = "SPT Trajectory handling"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OpenTrajectoryAnalysis/noctiluca"
"Bug Tracker" = "https://github.com/OpenTrajectoryAnalysis/noctiluca/issues"
