[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noctiluca"
version = "0.1.3"
authors = [
  { name="Simon Grosse-Holz", email="sgh256@mit.edu" }
]
description = "SPT trajectory analysis"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.2",
    "scipy>=1.6",
    "h5py>=2.8",
    "tqdm>=4",
]

[project.urls]
"Homepage" = "https://github.com/OpenTrajectoryAnalysis/noctiluca"
"Documentation" = "https://noctiluca.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/OpenTrajectoryAnalysis/noctiluca/issues"
